--- a/执行管理--质量计划--资源调配/resource_allocation_v1.0/html/resource_allocation.html
+++ b/执行管理--质量计划--资源调配/resource_allocation_v1.0/html/resource_allocation.html
@@ -10,9 +10,7 @@
     <link rel="stylesheet" href="../css/main.css" />
 
     <title>Document</title>
-  </head>
-
-  <body> -->
+  </head> -->
 <div id="resourceAllocationApp">
   <div class="btn-lsit">
     <button class="btn-itme" @click="SetRole">
@@ -32,7 +30,7 @@
       资源调配
     </button>
   </div>
-  <el-table ref="resourceAllocationTable" :header-cell-style="{background:'#f6f7f9',color:'#333'}" :data="tableData" style="width:1400px;margin:10px 0 10px 0;" :cell-style="cellStyle" row-key="task_id" :border="true" :height="tableHeight" default-expand-all
+  <el-table ref="resourceAllocationTable" :header-cell-style="{background:'#f6f7f9',color:'#333'}" :data="tableData" style="width:1520px;margin:10px 0 10px 0;" :cell-style="cellStyle" row-key="task_id" :border="true" :height="tableHeight" default-expand-all
   :tree-props="{ children: 'children', hasChildren: 'hasChildren' }">
     <el-table-column width="40" type="select">
       <template slot="header" slot-scope="scope">
@@ -155,27 +153,54 @@
     </el-table-column>
     <el-table-column label="承担人名称" width="120">
       <template slot-scope="scope">
-        <div class="checek-man" v-show="scope.row.task_type==='3'">
+        <div class="checek-man" v-show="scope.row.task_type==='3'&&scope.row.subArray[0].isreply==='2'">
           ${ scope.row.subArray[0].owner }
         </div>
-        <div class="checek-man" v-show="scope.row.task_type==='3'">
+        <div class="checek-man" v-show="scope.row.task_type==='3'&&scope.row.subArray[0].isreply==='2'">
           ${ scope.row.subArray[0].the_owner }
         </div>
-        <div class="checek-man" v-show="scope.row.task_type==='3'">
+        <div class="checek-man" v-show="scope.row.task_type==='3'&&scope.row.subArray[0].isreply==='2'">
           ${ scope.row.subArray[0].owner }
         </div>
-        <div class="checek-man" style="border:none" v-show="scope.row.task_type==='3'">
+        <div class="checek-man" style="border:none" v-show="scope.row.task_type==='3'&&scope.row.subArray[0].isreply==='2'">
           ${ scope.row.subArray[0].owner }
         </div>
         <!-- <div v-show="scope.row.task_type==='1' ||scope.row.task_type==='2'">
           ${ scope.row.owner }
         </div> -->
-        <div v-show="scope.row.task_type==='2'">
+        <div v-show="scope.row.task_type==='2'&&scope.row.subArray[0].isreplay==='2'">
           ${ scope.row.subArray[0].owner }
         </div>
         <div class="type-one" v-show="scope.row.task_type==='1'">
           <div class="checek-man" v-for="(item, index) in scope.row.subArray" :key="index">
-            ${ item.owner }
+            <span v-show="item.isreply==='2'">${ item.owner }</span>
+          </div>
+        </div>
+      </template>
+    </el-table-column>
+    <el-table-column label="承担人技能" width="120">
+      <template slot-scope="scope">
+        <div class="checek-man" v-show="scope.row.task_type==='3'">
+          ${ scope.row.subArray[0].skill }
+        </div>
+        <div class="checek-man" v-show="scope.row.task_type==='3'">
+          ${ scope.row.subArray[0].the_skill }
+        </div>
+        <div class="checek-man" v-show="scope.row.task_type==='3'">
+          ${ scope.row.subArray[0].skill }
+        </div>
+        <div class="checek-man" style="border:none" v-show="scope.row.task_type==='3'">
+          ${ scope.row.subArray[0].skill }
+        </div>
+        <!-- <div v-show="scope.row.task_type==='1' ||scope.row.task_type==='2'">
+          ${ scope.row.owner }
+        </div> -->
+        <div v-show="scope.row.task_type==='2'">
+          ${ scope.row.subArray[0].skill }
+        </div>
+        <div class="type-one" v-show="scope.row.task_type==='1'">
+          <div class="checek-man" v-for="(item, index) in scope.row.subArray" :key="index">
+            ${ item.skill }
           </div>
         </div>
       </template>
