fix quality_plan rescourse_allocation

--- a/执行管理--质量计划--资源调配/resource_allocation_v1.0/html/resource_allocation.html
+++ b/执行管理--质量计划--资源调配/resource_allocation_v1.0/html/resource_allocation.html
@@ -156,7 +156,7 @@
         <div class="checek-man" v-show="scope.row.task_type==='3'&&scope.row.subArray[0].isreply==='2'">
           ${ scope.row.subArray[0].owner }
         </div>
-        <div class="checek-man" v-show="scope.row.task_type==='3'&&scope.row.subArray[0].isreply==='2'">
+        <div class="checek-man" v-show="scope.row.task_type==='3'&&scope.row.subArray[0].the_isreply==='2'">
           ${ scope.row.subArray[0].the_owner }
         </div>
         <div class="checek-man" v-show="scope.row.task_type==='3'&&scope.row.subArray[0].isreply==='2'">
