--- a/任务看板/task_kanban/html/task_kanban.html
+++ b/任务看板/task_kanban/html/task_kanban.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -11,7 +11,7 @@
   <title>Document</title>
 </head>
 
-<body> -->
+<body>
   <div id="taskKanbanApp">
     <div class="top-box">
       <div v-for="(item,index) in summarData" :key="index" @click="handleSummaryItemClicked(item)" class="chose-time-slot">
@@ -116,10 +116,10 @@
       </div>
     </div>
   </div>
-  <!-- <script src="../js/vue.min.js"></script>
+  <script src="../js/vue.min.js"></script>
   <script src="../js/vue.js"></script>
   <script src="../js/element.js"></script>
   <script src="../js/test.js"></script>
 </body>
 
-</html> -->
+</html>
