--- a/执行管理--质量计划--资源调配/resource_allocation_v1.0/html/resource_allocation.html
+++ b/执行管理--质量计划--资源调配/resource_allocation_v1.0/html/resource_allocation.html
@@ -153,27 +153,33 @@
     </el-table-column>
     <el-table-column label="承担人名称" width="120">
       <template slot-scope="scope">
-        <div class="checek-man" v-show="scope.row.task_type==='3'&&scope.row.subArray[0].isreply==='2'">
-          ${ scope.row.subArray[0].owner }
+        <div class="checek-man" v-show="scope.row.task_type==='3'">
+          <span v-if="scope.row.subArray[0].isreply==='2'">${ scope.row.subArray[0].owner }</span>
+          <span v-else></span>
         </div>
-        <div class="checek-man" v-show="scope.row.task_type==='3'&&scope.row.subArray[0].the_isreply==='2'">
-          ${ scope.row.subArray[0].the_owner }
+        <div class="checek-man" v-show="scope.row.task_type==='3'">
+          <span v-if="scope.row.subArray[0].the_isreply==='2'">${ scope.row.subArray[0].the_owner }</span>
+          <span v-else></span>
         </div>
-        <div class="checek-man" v-show="scope.row.task_type==='3'&&scope.row.subArray[0].isreply==='2'">
-          ${ scope.row.subArray[0].owner }
+        <div class="checek-man" v-show="scope.row.task_type==='3'">
+          <span v-if="scope.row.subArray[0].isreply==='2'">${ scope.row.subArray[0].owner }</span>
+          <span v-else></span>
         </div>
-        <div class="checek-man" style="border:none" v-show="scope.row.task_type==='3'&&scope.row.subArray[0].isreply==='2'">
-          ${ scope.row.subArray[0].owner }
+        <div class="checek-man" style="border:none" v-show="scope.row.task_type==='3'">
+          <span v-if="scope.row.subArray[0].isreply==='2'">${ scope.row.subArray[0].owner }</span>
+          <span v-else></span>
         </div>
         <!-- <div v-show="scope.row.task_type==='1' ||scope.row.task_type==='2'">
           ${ scope.row.owner }
         </div> -->
-        <div v-show="scope.row.task_type==='2'&&scope.row.subArray[0].isreplay==='2'">
-          ${ scope.row.subArray[0].owner }
+        <div v-show="scope.row.task_type==='2'">
+          <span v-if="scope.row.subArray[0].isreply==='2'">${ scope.row.subArray[0].owner }</span>
+          <span v-else></span>
         </div>
         <div class="type-one" v-show="scope.row.task_type==='1'">
           <div class="checek-man" v-for="(item, index) in scope.row.subArray" :key="index">
-            <span v-show="item.isreply==='2'">${ item.owner }</span>
+            <span v-if="item.isreply==='2'">${ item.owner }</span>
+            <span v-else></span>
           </div>
         </div>
       </template>
