--- a/树形组织架构/tree_org_structure_v1.1/html/tree_org_structure.html
+++ b/树形组织架构/tree_org_structure_v1.1/html/tree_org_structure.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../css/main.css" />
     <title>Document</title>
   </head>
-  <body> -->
+  <body>
   <div id="treeOrgStructureApp" :style="{'width':appWidth}">
     <div class="root-box">
       <div class="wrap">
@@ -61,10 +61,10 @@
       </div>
     </div>
   </div>
-  <!-- <script src="../js/lodash.js"></script>
+  <script src="../js/lodash.js"></script>
   <script src="../js/vue.min.js"></script>
   <script src="../js/vue.js"></script>
   <script src="../js/element.js"></script>
   <script src="../js/test.js"></script>
   </body>
-</html> -->
+</html>
