--- a/执行管理-进度管理-进度分析及控制/进度对比分析表/当前任务管控-当前任务汇报及措施表/resources_report_measures_1.0/html/resouces_report_measures.html.html
+++ b/执行管理-进度管理-进度分析及控制/进度对比分析表/当前任务管控-当前任务汇报及措施表/resources_report_measures_1.0/html/resouces_report_measures.html.html
@@ -12,7 +12,7 @@
   </head>
 
 <body>
-<div id="resoucesRMApp">
+<div id="resourcesRMApp">
   <div class="table-content">
     <el-table ref="currentTaskTable" :header-cell-style="{height:'50px',background:'#f6f7f9',color:'#6b6b6b',fontWeight:'500',fontSize:'12px'}" :data="tableData" style="width:100%;margin:10px 0 10px 0;" :cell-style="cellStyle" row-key="task_id" :border="true">
       <el-table-column prop="plan_effect" label="计划功效" width="100" ></el-table-column>
@@ -103,7 +103,6 @@
 </div>
 <script src="../js/lodash.js"></script>
     <script src="../js/vue.min.js"></script>
-    <script src="../js/vue.js"></script>
     <script src="../js/element.js"></script>
     <script src="../js/test.js"></script>
   </body>
