--- a/执行管理-进度管理-进度分析及控制/进度对比分析表/进度对比分析表首页/progress_contrast_analysis_1.0/html/progress_contrast_analysis.html
+++ b/执行管理-进度管理-进度分析及控制/进度对比分析表/进度对比分析表首页/progress_contrast_analysis_1.0/html/progress_contrast_analysis.html
@@ -13,7 +13,7 @@
 
 <body>
 <div id="progressCAApp">
-  <!-- <div class="btn-lsit">
+  <div class="btn-lsit">
     <div class="btn-box-left">
       <button class="btn-itme" @click="refreshData">刷新</button>
       <button class="btn-itme" @click="goExit">
@@ -25,15 +25,15 @@
       <button class="btn-itme" @click="goCurrentTaskControl">
         当前任务管控
       </button>
-      <button class="btn-itme" @click="goTaskRTeportDetail">
+      <button class="btn-itme" @click="goTaskReportDetail">
         任务汇报详情
       </button>
       <button class="btn-itme" @click="goProgress">
         进度维护
       </button>
-      <button class="btn-itme" @click="gotaskReportDetail">
+      <!-- <button class="btn-itme" @click="goTaskReportDetail">
         导出excel文件
-      </button>
+      </button> -->
     </div>
     <div class="btn-box-right">
       <button class="btn-itme" @click="showSelectBox">筛选</button>
@@ -41,9 +41,45 @@
   </div>
   <div class="select-box" v-show="ifSelectBoxShow">
     <div class="select-options">
-      
+      <div class="sel-item">
+        <span class="sel-item-title">显示选项：</span>
+        <el-radio-group v-model="displayOption">
+          <el-radio :label="1">全部</el-radio>
+          <el-radio :label="2">仅显示差异</el-radio>
+        </el-radio-group>
+      </div>
+      <div class="sel-item">
+        <span class="sel-item-title">时间范围：</span>
+        <el-radio-group v-model="timeRange">
+          <el-radio :label="1">全部</el-radio>
+          <el-radio :label="2">从</el-radio>
+        </el-radio-group>
+        <!-- 日期范围选择器 -->
+        <el-date-picker
+          v-model="timeRangeValue"
+          type="daterange"
+          size="mini"
+          format="yyyy-MM-dd"
+          value-format="yyyy-MM-dd"
+          unlink-panels="true"
+          range-separator="~"
+          start-placeholder="开始日期"
+          :editable=false
+          @change="timeRangeChange"
+          end-placeholder="结束日期">
+        </el-date-picker>
+      </div>
+      <div class="sel-item">
+        <span class="sel-item-title">任务状态：</span>
+        <el-radio-group v-model="taskStatus">
+          <el-radio :label="1">全部</el-radio>
+          <el-radio :label="2">未开始</el-radio>
+          <el-radio :label="3">进行中</el-radio>
+          <el-radio :label="4">已完成</el-radio>
+        </el-radio-group>
+      </div>
     </div>
-  </div> -->
+  </div>
   <div class="table-content">
     <div class="table-box table-left">
       <el-table ref="projectTable" :header-cell-style="{height:'50px',background:'#f6f7f9',color:'#6b6b6b',fontWeight:'500',fontSize:'12px'}" :data="proTableData" style="margin:10px 0 10px 0;" :cell-style="cellStyle" row-key="task_id" :border="true"  default-expand-all
@@ -188,7 +224,6 @@
 </div>
 <script src="../js/lodash.js"></script>
     <script src="../js/vue.min.js"></script>
-    <script src="../js/vue.js"></script>
     <script src="../js/element.js"></script>
     <script src="../js/test.js"></script>
   </body>
