--- a/执行管理-进度管理-进度分析及控制/进度对比分析表/进度对比分析表首页/progress_contrast_analysis_1.0/html/progress_contrast_analysis.html
+++ b/执行管理-进度管理-进度分析及控制/进度对比分析表/进度对比分析表首页/progress_contrast_analysis_1.0/html/progress_contrast_analysis.html
@@ -34,29 +34,37 @@
       <!-- <button class="btn-itme" @click="goTaskReportDetail">
         导出excel文件
       </button> -->
+      <button class="btn-itme" @click="showSelectBox">筛选</button>
     </div>
     <div class="btn-box-right">
-      <button class="btn-itme" @click="showSelectBox">筛选</button>
+      当前日期：${currentDate}
     </div>
   </div>
   <div class="select-box" v-show="ifSelectBoxShow">
     <div class="select-options">
       <div class="sel-item">
         <span class="sel-item-title">显示选项：</span>
-        <el-radio-group v-model="displayOption">
+        <el-radio-group 
+        v-model="filterCondition.conditionOne"
+        @change="conditionOneChange"
+        >
           <el-radio :label="1">全部</el-radio>
           <el-radio :label="2">仅显示差异</el-radio>
         </el-radio-group>
       </div>
       <div class="sel-item">
         <span class="sel-item-title">时间范围：</span>
-        <el-radio-group v-model="timeRange">
+        <el-radio-group 
+        v-model="filterCondition.conditionTwo"
+        @change="conditionTwoChange"
+        >
           <el-radio :label="1">全部</el-radio>
           <el-radio :label="2">从</el-radio>
         </el-radio-group>
         <!-- 日期范围选择器 -->
         <el-date-picker
-          v-model="timeRangeValue"
+          ref="timeRangePicker"
+          v-model="filterCondition.timeRange"
           type="daterange"
           size="mini"
           format="yyyy-MM-dd"
@@ -65,13 +73,18 @@
           range-separator="~"
           start-placeholder="开始日期"
           :editable=false
+          :clearable=false
           @change="timeRangeChange"
+          @blur="timeRangeBlur"
           end-placeholder="结束日期">
         </el-date-picker>
       </div>
       <div class="sel-item">
         <span class="sel-item-title">任务状态：</span>
-        <el-radio-group v-model="taskStatus">
+        <el-radio-group 
+        v-model="filterCondition.conditionThree"
+        @change="conditionThreeChange"
+        >
           <el-radio :label="1">全部</el-radio>
           <el-radio :label="2">未开始</el-radio>
           <el-radio :label="3">进行中</el-radio>
@@ -82,8 +95,7 @@
   </div>
   <div class="table-content">
     <div class="table-box table-left">
-      <el-table ref="projectTable" :header-cell-style="{height:'50px',background:'#f6f7f9',color:'#6b6b6b',fontWeight:'500',fontSize:'12px'}" :data="proTableData" style="margin:10px 0 10px 0;" :cell-style="cellStyle" row-key="task_id" :border="true"  default-expand-all
-      :tree-props="{ children: 'children', hasChildren: 'hasChildren' }">
+      <el-table ref="projectTable" :header-cell-style="{height:'50px',background:'#f6f7f9',color:'#6b6b6b',fontWeight:'500',fontSize:'12px'}" :data="proTableData" style="margin:10px 0 10px 0;" :cell-style="cellStyle" row-key="task_id" :border="true" @row-dblclick="rowDblclick">
       <!-- <el-table-column type="select" width="40" align="center">
         <template slot="header" slot-scope="scope">
           <el-checkbox @change="handleCheckAllChange" v-model="allChecked"></el-checkbox>
@@ -117,6 +129,7 @@
     </el-table>
     </div>
     <div class="table-box table-right">
+      <!-- 紧前任务对当前任务影响情况表 -->
       <div class="detail-info-box">
         <div class="title-info-box">
           <div class="drop-btn">
@@ -132,6 +145,7 @@
           </el-table>
         </div>
       </div>
+      <!-- 当前任务情况表 -->
       <div class="detail-info-box">
         <div class="title-info-box">
           <div class="drop-btn">
@@ -145,14 +159,50 @@
             <el-table-column prop="plan_duration" label="计划工期" width="100"></el-table-column>
             <el-table-column prop="plan_quantities" label="计划工程量" width="100"></el-table-column>
             <el-table-column prop="duration_after_adjustment" label="调整后工期" width="100"></el-table-column>
-            <el-table-column prop="actual_duration" label="实际工期" width="100"></el-table-column>
-            <el-table-column prop="actual_quantities" label="实际工程量" width="100"></el-table-column>
+            <el-table-column label="实际工期" width="100">
+              <template slot-scope="scope">
+                <span class="status-text" v-if="currentTaskInfo.task_status==='1'">未开始</span>
+                <span class="status-text" v-else-if="currentTaskInfo.task_status==='2'">进行中</span>
+                <span v-else>${scope.row.actual_duration}</span>
+              </template>
+            </el-table-column>
+            <el-table-column label="实际工程量" width="100">
+              <template slot-scope="scope">
+                <span class="status-text" v-if="currentTaskInfo.task_status==='1'">未开始</span>
+                <span class="status-text" v-else-if="currentTaskInfo.task_status==='2'">进行中</span>
+                <span v-else>${scope.row.actual_quantities}</span>
+              </template>
+            </el-table-column>
             <el-table-column prop="free_time" label="自由时差" width="100"></el-table-column>
-            <el-table-column prop="free_time_exceed" label="超出自由时差" width="100"></el-table-column>
-            <el-table-column prop="free_time_analysis_conclusion" label="自由时差分析结论" width="160"></el-table-column>
+            <el-table-column label="超出自由时差" width="100">
+              <template slot-scope="scope">
+                <span class="status-text" v-if="currentTaskInfo.task_status==='1'">未开始</span>
+                <span class="status-text" v-else-if="currentTaskInfo.task_status==='2'">进行中</span>
+                <span v-else>${scope.row.free_time_exceed}</span>
+              </template>
+            </el-table-column>
+            <el-table-column label="自由时差分析结论" width="160">
+              <template slot-scope="scope">
+                <span class="status-text" v-if="currentTaskInfo.task_status==='1'">未开始</span>
+                <span class="status-text" v-else-if="currentTaskInfo.task_status==='2'">进行中</span>
+                <span v-else>${scope.row.free_time_analysis_conclusion}</span>
+              </template>
+            </el-table-column>
             <el-table-column prop="total_time" label="总时差" width="100"></el-table-column>
-            <el-table-column prop="total_time_exceed" label="超出总时差" width="100"></el-table-column>
-            <el-table-column prop="total_time_analysis_conclusion" label="总时差分析结论" width="160"></el-table-column>
+            <el-table-column label="超出总时差" width="100">
+              <template slot-scope="scope">
+                <span class="status-text" v-if="currentTaskInfo.task_status==='1'">未开始</span>
+                <span class="status-text" v-else-if="currentTaskInfo.task_status==='2'">进行中</span>
+                <span v-else>${scope.row.total_time_exceed}</span>
+              </template>
+            </el-table-column>
+            <el-table-column label="总时差分析结论" width="160">
+              <template slot-scope="scope">
+                <span class="status-text" v-if="currentTaskInfo.task_status==='1'">未开始</span>
+                <span class="status-text" v-else-if="currentTaskInfo.task_status==='2'">进行中</span>
+                <span v-else>${scope.row.total_time_analysis_conclusion}</span>
+              </template>
+            </el-table-column>
           </el-table>
         </div>
       </div>
@@ -176,7 +226,8 @@
           </el-table>
         </div>
       </div> -->
-      <div class="detail-info-box">
+      <!-- 后续任务处理表 -->
+      <div class="detail-info-box" v-show="ifFollowTaskShow">
         <div class="title-info-box">
           <div class="drop-btn">
             <i class="el-icon-caret-bottom" @click="iconArrowClick4(followTaskProcessing)" v-if="followTaskProcessing.open"></i>
@@ -188,13 +239,29 @@
           <el-table ref="TableRight" :header-cell-style="{height:'50px',background:'#f6f7f9',color:'#6b6b6b',fontWeight:'500',fontSize:'12px'}" :data="followTaskProcessing.data" style="margin:10px 0 10px 0;" :style="{width:tableWidth}" :cell-style="cellStyle" row-key="task_id" :border="true">
             <el-table-column prop="follow_task_name" label="后续任务名称" >
               <template slot-scope="scope">
-                <div class="search-icon">
+                <div class="search-icon" v-if="scope.$index===(followTaskProcessing.data.length-1)" @click="goSelectFollowTask">
                   <span style="font-size: 14px;">请选择后续任务</span>
                   <i class="el-icon-search"></i>
                 </div>
+                <div  v-else>
+                  <span style="font-size: 14px;">${scope.row.follow_task_name}</span>
+                </div>
               </template>
             </el-table-column>
-            <el-table-column prop="handling_measures" label="后续任务处理措施"></el-table-column>
+            <el-table-column prop="handling_measures" label="后续任务处理措施">
+              <template slot-scope="scope">
+                <div class="search-icon" v-if="scope.$index===(followTaskProcessing.data.length-1)">
+                  <span style="font-size: 14px;">请输入处理措施</span>
+                </div>
+                <div  v-else>
+                  <el-input 
+                  v-model="scope.row.handling_measures" 
+                  placeholder="请输入处理措施"
+                  maxlength="50"
+                  ></el-input>
+                </div>
+              </template>
+            </el-table-column>
           </el-table>
         </div>
       </div>
@@ -217,6 +284,34 @@
       <div class="message-btn-list">
         <button class="btn-item" @click="messageConfirm">
           确定
+        </button>
+      </div>
+    </div>
+  </div>
+  <div class="task-report-detail-box" v-show="taskReportDetailShow">
+    <div class="report-detail-content">
+      <div class="detail-title">
+        <span>${currentClickedTask?currentClickedTask.task_name:"XXX"}任务汇报详情</span>
+        <i class="el-icon-close" @click="closeTaskReportDetail"></i>
+      </div>
+      <div class="detail-table">
+        <span>截止到${currentDate}为止</span>
+        <el-table ref="taskReportDetailTable" :header-cell-style="{height:'50px',background:'#f6f7f9',color:'#6b6b6b',fontWeight:'500',fontSize:'12px'}" :data="taskReportDetailData" style="margin:10px 0 10px 0;" :cell-style="cellStyle" row-key="task_id" :border="true">
+          <el-table-column prop="plan_duration" label="计划工期" width="140" ></el-table-column>
+          <el-table-column prop="actual_duration" label="实际工期" ></el-table-column>
+          <el-table-column prop="duration_completion_rate" label="工期完成率" width="140" ></el-table-column>
+          <el-table-column prop="plan_quantities" label="计划工程量" width="140" ></el-table-column>
+          <el-table-column prop="actual_quantities" label="实际工程量" width="140" ></el-table-column>
+          <el-table-column prop="quantities_completion_rate" label="工程量完成率" width="140" ></el-table-column>
+          <el-table-column prop="remaining_duration" label="剩余工期" width="140" ></el-table-column>
+        </el-table>
+      </div>
+      <div class="message-btn-list">
+        <button class="btn-item" @click="closeTaskReportDetail">
+          退出
+        </button>
+        <button class="btn-item" @click="goTaskReportListDetail">
+          任务汇报列表详情
         </button>
       </div>
     </div>
