--- a/执行管理-进度管理-进度分析及控制/进度对比分析表/进度对比分析表首页/progress_contrast_analysis_1.0/html/progress_contrast_analysis.html
+++ b/执行管理-进度管理-进度分析及控制/进度对比分析表/进度对比分析表首页/progress_contrast_analysis_1.0/html/progress_contrast_analysis.html
@@ -15,7 +15,7 @@
 <div id="progressCAApp">
   <div class="btn-lsit">
     <div class="btn-box-left">
-      <button class="btn-itme" @click="refreshData">刷新</button>
+      <!-- <button class="btn-itme" @click="refreshData">刷新</button>
       <button class="btn-itme" @click="goExit">
         退出
       </button>
@@ -24,12 +24,12 @@
       </button>
       <button class="btn-itme" @click="goCurrentTaskControl">
         当前任务管控
-      </button>
+      </button> -->
       <button class="btn-itme" @click="goTaskReportDetail">
         任务汇报详情
       </button>
       <button class="btn-itme" @click="goProgress">
-        进度维护
+        同步到进度维护
       </button>
       <!-- <button class="btn-itme" @click="goTaskReportDetail">
         导出excel文件
@@ -161,45 +161,45 @@
             <el-table-column prop="duration_after_adjustment" label="调整后工期" width="100"></el-table-column>
             <el-table-column label="实际工期" width="100">
               <template slot-scope="scope">
-                <span class="status-text" v-if="currentTaskInfo.task_status==='1'">未开始</span>
-                <span class="status-text" v-else-if="currentTaskInfo.task_status==='2'">进行中</span>
+                <span class="status-text" v-if="scope.row.task_status==='1'">未开始</span>
+                <span class="status-text" v-else-if="scope.row.task_status==='2'">进行中</span>
                 <span v-else>${scope.row.actual_duration}</span>
               </template>
             </el-table-column>
             <el-table-column label="实际工程量" width="100">
               <template slot-scope="scope">
-                <span class="status-text" v-if="currentTaskInfo.task_status==='1'">未开始</span>
-                <span class="status-text" v-else-if="currentTaskInfo.task_status==='2'">进行中</span>
+                <span class="status-text" v-if="scope.row.task_status==='1'">未开始</span>
+                <span class="status-text" v-else-if="scope.row.task_status==='2'">进行中</span>
                 <span v-else>${scope.row.actual_quantities}</span>
               </template>
             </el-table-column>
             <el-table-column prop="free_time" label="自由时差" width="100"></el-table-column>
             <el-table-column label="超出自由时差" width="100">
               <template slot-scope="scope">
-                <span class="status-text" v-if="currentTaskInfo.task_status==='1'">未开始</span>
-                <span class="status-text" v-else-if="currentTaskInfo.task_status==='2'">进行中</span>
+                <span class="status-text" v-if="scope.row.task_status==='1'">未开始</span>
+                <span class="status-text" v-else-if="scope.row.task_status==='2'">进行中</span>
                 <span v-else>${scope.row.free_time_exceed}</span>
               </template>
             </el-table-column>
             <el-table-column label="自由时差分析结论" width="160">
               <template slot-scope="scope">
-                <span class="status-text" v-if="currentTaskInfo.task_status==='1'">未开始</span>
-                <span class="status-text" v-else-if="currentTaskInfo.task_status==='2'">进行中</span>
+                <span class="status-text" v-if="scope.row.task_status==='1'">未开始</span>
+                <span class="status-text" v-else-if="scope.row.task_status==='2'">进行中</span>
                 <span v-else>${scope.row.free_time_analysis_conclusion}</span>
               </template>
             </el-table-column>
             <el-table-column prop="total_time" label="总时差" width="100"></el-table-column>
             <el-table-column label="超出总时差" width="100">
               <template slot-scope="scope">
-                <span class="status-text" v-if="currentTaskInfo.task_status==='1'">未开始</span>
-                <span class="status-text" v-else-if="currentTaskInfo.task_status==='2'">进行中</span>
+                <span class="status-text" v-if="scope.row.task_status==='1'">未开始</span>
+                <span class="status-text" v-else-if="scope.row.task_status==='2'">进行中</span>
                 <span v-else>${scope.row.total_time_exceed}</span>
               </template>
             </el-table-column>
             <el-table-column label="总时差分析结论" width="160">
               <template slot-scope="scope">
-                <span class="status-text" v-if="currentTaskInfo.task_status==='1'">未开始</span>
-                <span class="status-text" v-else-if="currentTaskInfo.task_status==='2'">进行中</span>
+                <span class="status-text" v-if="scope.row.task_status==='1'">未开始</span>
+                <span class="status-text" v-else-if="scope.row.task_status==='2'">进行中</span>
                 <span v-else>${scope.row.total_time_analysis_conclusion}</span>
               </template>
             </el-table-column>
@@ -258,6 +258,7 @@
                   v-model="scope.row.handling_measures" 
                   placeholder="请输入处理措施"
                   maxlength="50"
+                  size="small"
                   ></el-input>
                 </div>
               </template>
