--- a/质量管理-质量分析与控制/quality_analysis_control_v1.0/html/quality_analysis_control.html
+++ b/质量管理-质量分析与控制/quality_analysis_control_v1.0/html/quality_analysis_control.html
@@ -48,7 +48,7 @@
     <div class="table-box table-left">
       <el-table ref="projectTable" :header-cell-style="{height:'50px',background:'#f6f7f9',color:'#6b6b6b',fontWeight:'500',fontSize:'12px'}" :data="proTableData" style="margin:10px 0 10px 0;" :cell-style="cellStyle" row-key="task_id" :border="true"  default-expand-all
       :tree-props="{ children: 'children', hasChildren: 'hasChildren' }"
-      @row-dblclick="currentTaskClick"
+      @row-click="currentTaskClick"
       >
       <el-table-column prop="wbs" label="任务代码" width="100" ></el-table-column>
       <el-table-column prop="task_name" label="WBS任务名称"></el-table-column>
@@ -66,7 +66,7 @@
       </el-table-column>
       <el-table-column label="处理状态" width="180" >
         <template slot-scope="scope">
-          ${scope.row.quality_handle_status?"待处理":"已处理"}
+          ${scope.row.quality_handle_status==='0'?"未处理":"已处理"}
         </template>
       </el-table-column>
     </el-table>
@@ -81,14 +81,21 @@
         :cell-style="cellStyle" 
         row-key="task_id" 
         :border="true"
-        @row-click="currentTaskClick"
       >
         <el-table-column prop="owner" label="承担人" width="100" ></el-table-column>
         <el-table-column prop="plan_endtime" label="计划完成并提交时间" width="160"></el-table-column>
         <el-table-column prop="end_time" label="实际完成并提交时间" width="160" ></el-table-column>
-        <el-table-column prop="handling_measures" label="偏差值"  width="80" ></el-table-column>
-        <el-table-column prop="quality_reason" label="偏差原因" width="200" ></el-table-column>
-        <el-table-column prop="quality_action" label="纠偏措施"></el-table-column>
+        <el-table-column prop="DValue" label="偏差值"  width="80" ></el-table-column>
+        <el-table-column label="偏差原因" width="200" >
+          <template slot-scope="scope">
+            <el-input @change="reasonChange" size="small" maxlength="50" :disabled="scope.row.task_schedule_status!=='200'" v-model="scope.row.quality_reason" placeholder="请输入内容偏差原因"></el-input>
+          </template>
+        </el-table-column>
+        <el-table-column label="纠偏措施">
+          <template slot-scope="scope">
+            <el-input @change="actionChange" size="small" maxlength="50" :disabled="scope.row.task_schedule_status!=='200'" v-model="scope.row.quality_action" placeholder="请输入纠偏措施"></el-input>
+          </template>
+        </el-table-column>
       </el-table>
       <!-- 紧前任务对当前任务影响情况 -->
       <!-- <div class="detail-info-box">
@@ -176,7 +183,7 @@
       </div> -->
     </div>
   </div>
-  <div class="message-box" v-show="messageBoxShow">
+  <!-- <div class="message-box" v-show="messageBoxShow">
     <div class="message-content">
       <div class="message-title">
         <span>提醒</span>
@@ -196,7 +203,7 @@
         </button>
       </div>
     </div>
-  </div>
+  </!-->
 </div>
 <script src="../js/lodash.js"></script>
     <script src="../js/vue.min.js"></script>
