处理质量分析控制控件不显示问题

--- a/质量管理-质量分析与控制/quality_analysis_control_v1.0/html/quality_analysis_control.html
+++ b/质量管理-质量分析与控制/quality_analysis_control_v1.0/html/quality_analysis_control.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 
 <html lang="en">
   <head>
@@ -11,7 +11,7 @@
     <title>Document</title>
   </head>
 
-<body>
+<body> -->
 <div id="qualityACApp">
   <!-- <div class="btn-lsit">
     <div class="btn-box-left">
@@ -205,9 +205,9 @@
     </div>
   </!-->
 </div>
-<script src="../js/lodash.js"></script>
+<!-- <script src="../js/lodash.js"></script>
     <script src="../js/vue.min.js"></script>
     <script src="../js/element.js"></script>
     <script src="../js/test.js"></script>
   </body>
-</html>
+</html> -->
