修复质量分析控制不显示的bug和偏差值优化  完善进度对比分析表

--- a/质量管理-质量分析与控制/quality_analysis_control_v1.0/html/quality_analysis_control.html
+++ b/质量管理-质量分析与控制/quality_analysis_control_v1.0/html/quality_analysis_control.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 
 <html lang="en">
   <head>
@@ -11,7 +11,7 @@
     <title>Document</title>
   </head>
 
-<body> -->
+<body>
 <div id="qualityACApp">
   <!-- <div class="btn-lsit">
     <div class="btn-box-left">
@@ -66,7 +66,7 @@
       </el-table-column>
       <el-table-column label="处理状态" width="180" >
         <template slot-scope="scope">
-          ${scope.row.quality_handle_status==='0'?"未处理":"已处理"}
+          ${scope.row.quality_handle_status==='1'?"已处理":"未处理"}
         </template>
       </el-table-column>
     </el-table>
@@ -205,9 +205,9 @@
     </div>
   </!-->
 </div>
-<!-- <script src="../js/lodash.js"></script>
+<script src="../js/lodash.js"></script>
     <script src="../js/vue.min.js"></script>
     <script src="../js/element.js"></script>
     <script src="../js/test.js"></script>
   </body>
-</html> -->
+</html>
