--- a/执行管理-进度管理-进度分析及控制/进度对比分析表/进度对比分析表首页/progress_contrast_analysis_1.0/html/progress_contrast_analysis.html
+++ b/执行管理-进度管理-进度分析及控制/进度对比分析表/进度对比分析表首页/progress_contrast_analysis_1.0/html/progress_contrast_analysis.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../css/main.css" />
     <title>Document</title>
   </head>
-  <body>
+  <body> -->
     <div id="progressCAApp">
       <div class="btn-lsit">
         <div class="btn-box-left">
@@ -234,14 +234,14 @@
             </div>
             <div class="table-info-box" v-if="followTaskProcessing.open">
               <el-table ref="TableRight" :header-cell-style="{height:'50px',background:'#f6f7f9',color:'#6b6b6b',fontWeight:'500',fontSize:'12px'}" :data="followTaskProcessing.data" style="margin:10px 0 10px 0;" :style="{width:tableWidth}" :cell-style="cellStyle" row-key="task_id" :border="true">
-                <el-table-column prop="follow_task_name" label="后续任务名称" >
+                <el-table-column prop="task_name" label="后续任务名称" >
                   <template slot-scope="scope">
                     <div class="search-icon" v-if="scope.$index===(followTaskProcessing.data.length-1)" @click="goSelectFollowTask">
                       <span style="font-size: 14px;">请选择后续任务</span>
                       <i class="el-icon-search"></i>
                     </div>
                     <div  v-else>
-                      <span style="font-size: 14px;">${scope.row.follow_task_name}</span>
+                      <span style="font-size: 14px;">${scope.row.task_name}</span>
                     </div>
                   </template>
                 </el-table-column>
@@ -256,6 +256,7 @@
                       placeholder="请输入处理措施"
                       maxlength="50"
                       size="small"
+                      @change="hmChange"
                       ></el-input>
                     </div>
                   </template>
@@ -315,9 +316,9 @@
         </div>
       </div>
     </div>
-    <script src="../js/lodash.js"></script>
+    <!-- <script src="../js/lodash.js"></script>
     <script src="../js/vue.min.js"></script>
     <script src="../js/element.js"></script>
     <script src="../js/test.js"></script>
   </body>
-</html>
+</html> -->
