质量维护 新增纠偏措施字段

--- a/执行管理--质量计划--资源调配/resource_allocation_v1.0/html/resource_allocation.html
+++ b/执行管理--质量计划--资源调配/resource_allocation_v1.0/html/resource_allocation.html
@@ -44,6 +44,7 @@
     </el-table-column>
     <el-table-column prop="task_name" label="WBS任务名称"></el-table-column>
     <el-table-column prop="wbs" label="任务代码" width="120"></el-table-column>
+    <el-table-column prop="quality_action" label="纠偏措施" width="120"></el-table-column>
     <el-table-column label="工期" width="120">
       <template slot-scope="scope">
         <div>
