--- a/成本管理/成本分析与控制/成本对比分析表/当前任务成本管控/ctask_cost_control_1.0/html/ctask_cost_control.html
+++ b/成本管理/成本分析与控制/成本对比分析表/当前任务成本管控/ctask_cost_control_1.0/html/ctask_cost_control.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="en">
+<!-- <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -11,7 +11,7 @@
     <title>Document</title>
   </head>
 
-<body>
+<body> -->
 <div id="ctaskCostControlApp">
   <div class="item-wrap">
     <div class="title-info-box">
@@ -22,7 +22,7 @@
       <span class="title-text">任务计划资源列表</span>
     </div>
     <div class="table-content" v-show="ifTableOneShow">
-      <el-table ref="taskPlanResourcesTable" :header-cell-style="{height:'50px',background:'#f6f7f9',color:'#6b6b6b',fontWeight:'500',fontSize:'12px'}" :data="tableData1" style="width:100%;margin:10px 0 10px 0;" :cell-style="cellStyle" row-key="task_id" :border="true">
+      <el-table ref="taskPlanResourcesTable" max-height="350" :header-cell-style="{height:'50px',background:'#f6f7f9',color:'#6b6b6b',fontWeight:'500',fontSize:'12px'}" :data="tableData1" style="width:100%;margin:10px 0 10px 0;" :cell-style="cellStyle" row-key="task_id" :border="true">
         <el-table-column prop="plan_total_quantities" label="计划总工程量" width="200" ></el-table-column>
         <el-table-column prop="plan_total_duration" label="计划总工期" width="200"></el-table-column>
           <el-table-column  label="资源名称" >
@@ -87,7 +87,7 @@
       <span class="title-text">任务资源汇报详情及措施</span>
     </div>
     <div class="table-content" v-show="ifTableTwoShow">
-      <el-table ref="currentTaskTable" :header-cell-style="{height:'50px',background:'#f6f7f9',color:'#6b6b6b',fontWeight:'500',fontSize:'12px'}" :data="tableData2" style="width:100%;margin:10px 0 10px 0;" :cell-style="cellStyle" row-key="task_id" :border="true">
+      <el-table ref="currentTaskTable" :header-cell-style="{height:'50px',background:'#f6f7f9',color:'#6b6b6b',fontWeight:'500',fontSize:'12px'}" :data="tableData2" style="width:100%;margin:10px 0 10px 0;" max-height="350" :cell-style="cellStyle" row-key="task_id" :border="true">
         <el-table-column prop="report_date" label="本次汇报日期" width="100" ></el-table-column>
         <el-table-column prop="report_completed_quantities" label="本次汇报完成工程量" width="100"></el-table-column>
         <el-table-column prop="actual_cumulative_completed_quantities" label="实际累计完成工程量" width="100"></el-table-column>
@@ -139,14 +139,18 @@
         </el-table-column>
         <el-table-column prop="predicted_value" label="单价影响后单位工程资源耗用量预测值" width="130"></el-table-column>
         <el-table-column prop="suggestions_comparative_treatment" label="根据基准值与实际单位工程量资源消耗量对比处理建议" width="180"></el-table-column>
-        <el-table-column prop="rectification_measures" label="纠偏措施" ></el-table-column>
+        <el-table-column label="纠偏措施" >
+          <template slot-scope="scope">
+            <el-input :disabled="currentType==='1'" size="small" maxlength="50" v-model="scope.row.rectification_measures" placeholder="请输入纠偏措施"></el-input>
+          </template>
+        </el-table-column>
       </el-table>
     </div>
   </div>
 </div>
-<script src="../js/lodash.js"></script>
+<!-- <script src="../js/lodash.js"></script>
     <script src="../js/vue.min.js"></script>
     <script src="../js/element.js"></script>
     <script src="../js/test.js"></script>
   </body>
-</html>
+</html> -->
