--- a/成本管理/成本分析与控制/成本对比分析表/紧前任务情况/cost_pretask_info_1.0/html/cost_pretask_info.html
+++ b/成本管理/成本分析与控制/成本对比分析表/紧前任务情况/cost_pretask_info_1.0/html/cost_pretask_info.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 
 <html lang="en">
   <head>
@@ -11,7 +11,7 @@
     <title>Document</title>
   </head>
 
-<body>
+<body> -->
   <!-- 成本对比分析--紧前任务情况 左右数据联动表格 -->
 <div id="costPretaskInfoApp">
   <!-- <div class="btn-lsit">
@@ -180,10 +180,9 @@
     </div>
   </div>
 </div>
-<script src="../js/lodash.js"></script>
+<!-- <script src="../js/lodash.js"></script>
     <script src="../js/vue.min.js"></script>
-    <script src="../js/vue.js"></script>
     <script src="../js/element.js"></script>
     <script src="../js/test.js"></script>
   </body>
-</html>
+</html> -->
