--- a/执行管理-进度管理-进度分析及控制/进度对比分析表/任务汇报详情列表/report_detail_list_1.0/html/report_detail_list.html
+++ b/执行管理-进度管理-进度分析及控制/进度对比分析表/任务汇报详情列表/report_detail_list_1.0/html/report_detail_list.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 
 <html lang="en">
   <head>
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../css/main.css" />
     <title>Document</title>
   </head>
-  <body>
+  <body> -->
     <div id="reportDLApp">
       <div class="table-content">
         <el-table ref="currentTaskTable"  :header-cell-style="{height:'50px',background:'#f6f7f9',color:'#6b6b6b',fontWeight:'500',fontSize:'12px'}" :data="tableData" style="width:100%;margin:10px 0 10px 0;" :cell-style="cellStyle" row-key="task_id" :border="true">
@@ -26,9 +26,9 @@
         </el-table>
       </div>
     </div>
-    <script src="../js/lodash.js"></script>
+    <!-- <script src="../js/lodash.js"></script>
     <script src="../js/vue.min.js"></script>
     <script src="../js/element.js"></script>
     <script src="../js/test.js"></script>
   </body>
-</html>
+</html> -->
