finish data_statistic

--- a/后台管理中心/数据统计/data_statistics_chart_1.0/html/data_statistics_chart.html
+++ b/后台管理中心/数据统计/data_statistics_chart_1.0/html/data_statistics_chart.html
@@ -1,68 +1,70 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-		<link rel="stylesheet" href="../css/element.css" />
-		<link rel="stylesheet" href="../css/main.css" />
 
-		<title>Document</title>
-	</head>
+<head>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+	<link rel="stylesheet" href="../css/element.css" />
+	<link rel="stylesheet" href="../css/main.css" />
 
-	<body>
-<div id="dataStatisticsChartApp">
-	
-	<!-- <div class="chart-box" v-for="(item, index) in summaryData" :key="index">
-		<div :id="'chart'+index" class="chart-container"></div>
-		<div class="chart-title">
-			<span>${item.resTitle}</span>
+	<title>Document</title>
+</head>
+
+<body> -->
+	<div id="dataStatisticsChartApp">
+
+		<!-- <div class="chart-box" v-for="(item, index) in summaryData" :key="index">
+				<div :id="'chart'+index" class="chart-container"></div>
+				<div class="chart-title">
+					<span>${item.resTitle}</span>
+				</div>
+			</div> -->
+		<div class="chart-box">
+			<div class="chart-wrap">
+				<!-- 图表1  饼图 -->
+				<div id="chart0" class="chart-container"></div>
+			</div>
+			<div class="chart-title">
+				<span>${summaryData[0].resTitle}</span>
+			</div>
 		</div>
-	</div> -->
-	<div class="chart-box">
-		<div class="chart-wrap">
-			<!-- 图表1  饼图 -->
-			<div id="chart0" class="chart-container"></div>
+		<div class="chart-box">
+			<div class="chart-wrap">
+				<!-- 图表2  折线图 -->
+				<div id="chart1" class="chart-container"></div>
+			</div>
+			<div class="chart-title">
+				<span>${summaryData[1].resTitle}</span>
+			</div>
 		</div>
-		<div class="chart-title">
-			<span>${summaryData[0].resTitle}</span>
+		<div class="chart-box">
+			<div class="chart-wrap">
+				<!-- 图表3  柱状图 -->
+				<div id="chart2" class="chart-container"></div>
+			</div>
+			<div class="chart-title">
+				<span>${summaryData[2].resTitle}</span>
+			</div>
+		</div>
+		<div class="chart-box">
+			<div class="chart-wrap">
+				<!-- 图表4  仪表图 -->
+				<div id="chart3" class="chart-container chart-container-except"></div>
+				<!-- 图表5  雷达图 -->
+				<div id="chart4" class="chart-container chart-container-except"></div>
+			</div>
+			<div class="chart-title">
+				<span>${summaryData[3].resTitle}</span>
+			</div>
 		</div>
 	</div>
-	<div class="chart-box">
-		<div class="chart-wrap">
-			<!-- 图表2  折线图 -->
-			<div id="chart1" class="chart-container"></div>
-		</div>
-		<div class="chart-title">
-			<span>${summaryData[1].resTitle}</span>
-		</div>
-	</div>
-	<div class="chart-box">
-		<div class="chart-wrap">
-			<!-- 图表3  柱状图 -->
-			<div id="chart2" class="chart-container"></div>
-		</div>
-		<div class="chart-title">
-			<span>${summaryData[2].resTitle}</span>
-		</div>
-	</div>
-	<div class="chart-box">
-		<div class="chart-wrap">
-			<!-- 图表4  仪表图 -->
-			<div id="chart3" class="chart-container chart-container-except"></div>
-			<!-- 图表5  雷达图 -->
-			<div id="chart4" class="chart-container chart-container-except"></div>
-		</div>
-		<div class="chart-title">
-			<span>${summaryData[3].resTitle}</span>
-		</div>
-	</div>
-</div>
-<script src="../js/vue.min.js"></script>
-		<script src="../js/echarts.min.js"></script>
-		<script src="../js/macarons.js"></script>
-		<script src="../js/vue.min.js"></script>
-		<script src="../js/element.js"></script>
-		<script src="../js/test.js"></script>
-	</body>
-</html>
+	<!-- <script src="../js/vue.min.js"></script>
+	<script src="../js/echarts.min.js"></script>
+	<script src="../js/macarons.js"></script>
+	<script src="../js/vue.min.js"></script>
+	<script src="../js/element.js"></script>
+	<script src="../js/test.js"></script>
+</body>
+
+</html> -->
