--- a/成本管理/成本分析与控制/成本对比分析表/成本对比分析表首页/cost_contrast_analysis_1.0/html/cost_contrast_analysis.html
+++ b/成本管理/成本分析与控制/成本对比分析表/成本对比分析表首页/cost_contrast_analysis_1.0/html/cost_contrast_analysis.html
@@ -139,7 +139,17 @@
             <el-table-column prop="actual_duration" label="实际工期(工日)" width="120"></el-table-column>
             <el-table-column prop="actual_quantities" label="实际工程量" width="100"></el-table-column>
             <el-table-column prop="actual_cost" label="实际总费用" width="100"></el-table-column>
-            <el-table-column prop="deviation_reason" label="偏差原因" ></el-table-column>
+            <el-table-column prop="deviation_reason" label="偏差原因" >
+              <template slot-scope="scope">
+                <el-input 
+                  v-model="scope.row.deviation_reason" 
+                  placeholder="请输入偏差原因"
+                  maxlength="50"
+                  size="small"
+                  @change="drChange"
+                  ></el-input>
+              </template>
+            </el-table-column>
             <!-- <el-table-column prop="free_time" label="自由时差" width="100"></el-table-column>
             <el-table-column prop="free_time_exceed" label="超出自由时差" width="100"></el-table-column>
             <el-table-column prop="free_time_analysis_conclusion" label="自由时差分析结论" width="160"></el-table-column>
@@ -168,7 +178,17 @@
             <el-table-column prop="cv" label="CV(成本偏差)"></el-table-column>
             <el-table-column prop="cpi" label="CPI(成本绩效指数)" ></el-table-column>
             <el-table-column prop="deviation_type" label="偏差类型"></el-table-column>
-            <el-table-column prop="deviation_reason" label="偏差原因"></el-table-column>
+            <el-table-column prop="deviation_reason" label="偏差原因">
+              <template slot-scope="scope">
+                <el-input 
+                  v-model="scope.row.deviation_reason" 
+                  placeholder="请输入偏差原因"
+                  maxlength="50"
+                  size="small"
+                  @change="evasChange"
+                  ></el-input>
+              </template>
+            </el-table-column>
           </el-table>
         </div>
       </div>
