--- a/任务看板/task_kanban/html/task_kanban.html
+++ b/任务看板/task_kanban/html/task_kanban.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -11,7 +11,7 @@
   <title>Document</title>
 </head>
 
-<body> -->
+<body>
   <div id="taskKanbanApp">
     <!-- tab标签 切换设计审核任务和提资任务面板 -->
     <div class="tab-box">
@@ -162,9 +162,9 @@
       </div>
     </div>
   </div>
-  <!-- <script src="../js/lodash.js"></script>
+  <script src="../js/lodash.js"></script>
   <script src="../js/vue.min.js"></script>
   <script src="../js/element.js"></script>
   <script src="../js/test.js"></script>
 </body>
-</html> -->
+</html>
